fix socmed footer align

--- a/style-contact.css
+++ b/style-contact.css
@@ -267,7 +267,6 @@ footer .sec2 ul li a {
 
 footer .sec3 ul li {
   list-style: none;
-  display: flex;
   margin: 8px 0;
   align-items: center;
   font-size: 16px;
