--- a/style-product.css
+++ b/style-product.css
@@ -479,7 +479,6 @@ footer .sec2 ul li a {
 
 footer .sec3 ul li {
   list-style: none;
-  display: flex;
   margin: 8px 0;
   align-items: center;
   font-size: 16px;
